dex/dex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: dex
spec:
  selector:
    matchLabels:
      app: dex
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex # This is created below
      containers:
        - image: quay.io/dexidp/dex:v2.26.0
          name: dex
          command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
          ports:
            - name: http
              containerPort: 5556
          volumeMounts:
            - name: config
              mountPath: /etc/dex/cfg
          # env:
          # - name: GITHUB_CLIENT_ID
          #   valueFrom:
          #     secretKeyRef:
          #       name: github-client
          #       key: client-id
          # - name: GITHUB_CLIENT_SECRET
          #   valueFrom:
          #     secretKeyRef:
          #       name: github-client
          #       key: client-secret
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5556
      volumes:
        - name: config
          configMap:
            name: dex
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  type: ClusterIP
  ports:
    - name: dex
      port: 5556
      protocol: TCP
      targetPort: 5556
  selector:
    app: dex
